<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BAZARLAK</string>

    <string name="action_settings">Settings</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>

    <string name="empty_ribots">There aren\'t any ribots</string>
    <string name="error_loading_ribots">There was a problem loading the ribots</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="home_tab">Home</string>
    <string name="category_tab">Category</string>
    <string name="search_tab">Search</string>
    <string name="bag_tab">Bag</string>
    <string name="me_tab">Me</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_label">Login</string>
    <string name="signup_label">Sign up</string>
    <string name="wlc_label">Welecome To BAZARLAK</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="confirm_label">Confirm</string>
    <string name="forgot_password_label">Forgot Password?</string>
    <string name="register_label">Register</string>
    <string name="fname_label">First Name</string>
    <string name="lname_label">Last Name</string>
    <string name="accept_label">You agree on the Terms and Privacy Policy</string>
    <string name="empty_bag_3_label">for more options</string>
    <string name="empty_bag_2_label">Click on the category section below</string>
    <string name="empty_bag_1_label">Your bag is empty :(</string>
    <string name="go_shopping_label">Go Shopping</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_hint">Search for your item</string>
    <string name="your_orders">Your Orders</string>
    <string name="your_profile">Your Profile</string>
    <string name="payment_details">Payment Details</string>
    <string name="track_orders">Track Orders</string>
    <string name="change_lang">Change Language</string>
    <string name="contact_us">Contact us</string>
    <string name="invite">Invite your friends</string>
    <string name="filter_label">Filter</string>
    <string name="apply_label">Apply</string>
    <string name="sort_label">Sort</string>
    <string name="price1_label">PRICE: High to Low</string>
    <string name="price2_label">PRICE: Low to High</string>
    <string name="refine_label">REFINE</string>
    <string name="item_type">Item type:</string>
    <string name="add_to_bag">Add to Bag</string>
    <string name="product_info_label">Product Information</string>
    <string name="size_guide_label">Size Guide</string>
    <string name="shipping_worldwide_label">Shipping worldwide</string>
    <string name="dialog_title_label">What is next!</string>
    <string name="view_bag_label">View Bag</string>
    <string name="continue_shopping_label">Continue Shopping</string>
    <string name="thank_label">Thank you!</string>
    <string name="text3_label">Delivery expected time is within x-y working days.</string>
    <string name="text2_label">Order ID: <b> BA12345678 </b> was placed.</string>
    <string name="text1_label">Order Successfully Placed.</string>


    <string name="error_logging_message">Error while login ..Please try again</string>
    <!--<string name="error_logging_message_first_time">You should have internet connection for the first time using the application</string>-->
    <string name="server_problem">Problem with server..try again</string>
    <!-- user not found while logging Message-->
    <string name="user_not_found_error_logging_message">User not found..</string>
    <!-- logging successfually -->
    <string name="login_success_message">logged in successfully</string>
    <string name="signup_success_message">Signed up successfully</string>
    <string name="logging_message">Login..</string>
    <string name="signup_message">SignUp..</string>
    <string name="gender_label">Gender</string>
    <string name="mobile_label">Mobile</string>
    <string name="no_connection">Please check your internet connection..</string>
    <string name="filter_color">Color</string>
    <string name="filter_size">Size</string>
    <string name="filter_brand">Brand</string>
    <string name="filter_category">Category</string>
    <string name="select_hint">Select a</string>
    <string name="empty_view">This list is empty!</string>
    <string name="save_label">Save</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_mobile">MOBILE</string>
    <string name="hint_country">COUNTRY</string>
    <string name="hint_city">CITY</string>
    <string name="hint_state">STATE</string>
    <string name="hint_address1">ADDRESS 1</string>
    <string name="hint_address2">ADDRESS 2</string>
    <string name="hint_post_code">POSTCODE</string>
    <string name="address_details_label">ADDRESS DETAILS</string>
    <string name="checkout_label">Checkout</string>
    <string name="item_size" formatted="false">Size: %1$s</string>
    <string name="item_price">item_price</string>
    <string name="subTotal_price_label">Subtotal</string>
    <string name="total_price_label">Total</string>
    <string name="shipping_label">Shipping</string>
    <string name="all_label">All\n %1s</string>
    <string name="buy_now_label">Buy Now</string>
    <string name="pay_label"><![CDATA[Billing & Shipping]]></string>
    <string name="choose_payment_label">Choose a payment method</string>
    <string name="shipping_and_Billing__label">Shipping and Billing Address</string>
    <string name="shipping_address">Shipping Address</string>

    <string name="account_info_label">Account Information</string>
    <string name="signout_label">Sign out</string>
    <string name="edit_label">EDIT</string>
    <string name="help_center">Help Center</string>
    <string name="fname_plus_label">First Name*</string>
    <string name="lname_plus_label">Last Name*</string>
    <string name="phone_label">Phone</string>
    <string name="hint_country_plus">Country*</string>
    <string name="email_plus_label">Old Email*</string>
    <string name="confrim_email_plus_label">New Email*</string>
    <string name="change_email_label">Change Email</string>
    <string name="old_password_plus_label">Old Password*</string>
    <string name="new_password_plus_label">New Password*</string>
    <string name="confirm_password_plus_label">Confirm Password*</string>
    <string name="change_password_label">Change Password</string>
    <string name="enter_email_hint">Enter Your Email*</string>
    <string name="send_label">Send</string>
    <string name="title_activity_payment_details">PaymentDetailsActivity</string>
    <string name="title_activity_your_order">Your Order</string>
    <string name="current_label">Current</string>
    <string name="prev_label">Previous</string>
    <string name="order_status"><b> Order Status:</b><b><font fgcolor="#ff0000">%1$s</font> </b></string>
    <string name="order_no"><b> Order NO:</b><b><font fgcolor="#808080">%1$s</font> </b></string>
    <string name="delete_order">Delete Order</string>
    <string name="hint_card_no">CARD NUMBER</string>
    <string name="hint_expire">EXPIRE DATE</string>
    <string name="hint_name">NAME ON CARD</string>
    <string name="hint_cvv">CVV</string>
    <string name="save_card_label">save this as default payment method</string>
    <string name="empty_inputs">Please check non valid inputs</string>
    <string name="empty_label">This field is required</string>
    <string name="empty_orders">You don\'t have any orders</string>
    <string name="quntitye_label">QYT: %1$s</string>
    <string name="currency">$</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string-array name="gender" tools:ignore="ExtraTranslation">
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>

    <string name="arabic" tools:ignore="ExtraTranslation">العربية</string>
    <string name="english" tools:ignore="ExtraTranslation">English</string>

    <string name="i_recommend">Let me recommend you this application %1$s</string>
    <string name="action_share_app">share app via</string>
    <string name="signout_confrimation">Are you sure you want to signout?</string>
    <string name="signout">Signout</string>
</resources>
