<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/accent"
    android:layout_margin="@dimen/activity_vertical_margin">
    
    <Button
        android:clickable="false"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@drawable/white_button_shap"
        android:text="@string/signup_label"
        android:textColor="@color/colorPrimary"
        />
    <EditText
        android:id="@+id/fname_signup_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:hint="@string/fname_label"/>

    <EditText
        android:id="@+id/lname_signup_editText"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:hint="@string/lname_label"/>

    <EditText
        android:id="@+id/gender_signup_editText"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:hint="@string/email_label"/>

    <EditText
        android:id="@+id/email_Login_editText"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:hint="@string/email_label"/>

    <EditText
        android:id="@+id/password_Login_editText"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:hint="@string/password_label"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <CheckBox
            android:id="@+id/checkbox_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/accept_label"
            />
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@drawable/red_button_shap"
        android:text="@string/register_label"
        android:textColor="@color/accent"
        />
</LinearLayout>
