<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_margin="@dimen/activity_vertical_margin">
    
    <Button
        android:clickable="false"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@drawable/white_button_shap"
        android:text="@string/login_label"
        android:textColor="@color/colorPrimary"
        />

    <EditText
        android:id="@+id/email_Login_editText"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:hint="@string/email_label"/>

    <EditText
        android:id="@+id/password_Login_editText"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:hint="@string/password_label"/>

    <Button
        android:id="@+id/login_button"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@drawable/red_button_shap"
        android:text="@string/confirm_label"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/forgot_password_button"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/forgot_password_label"
        android:textColor="@color/textColor"
        />
</LinearLayout>
