<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/paypalimge" />

        <ImageView
            android:id="@+id/arrow_up"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_more" />
    </RelativeLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.braintreepayments.cardform.view.CardEditText
                android:id="@+id/input_cardNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_card_no"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.braintreepayments.cardform.view.ExpirationDateEditText
                android:id="@+id/input_expire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_expire"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.braintreepayments.cardform.view.CvvEditText
                android:id="@+id/input_cvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cvv"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_card_label"
                android:textColor="@android:color/black" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>