<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="uk.co.ribot.androidboilerplate.ui.profile.your_profile.ChangePasswordFragment">

    <!-- TODO: Update blank fragment layout -->
    <include
        android:id="@+id/second_toolbar"
        layout="@layout/secendary_toolbar_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/second_toolbar"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <EditText
            android:id="@+id/old_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/old_password_plus_label"
            android:inputType="textPassword"
            android:paddingBottom="12dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <EditText
            android:id="@+id/new_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/new_password_plus_label"
            android:inputType="textPassword"
            android:paddingBottom="12dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <EditText
            android:id="@+id/confirm_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/confirm_password_plus_label"
            android:inputType="textPassword"
            android:paddingBottom="12dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        style="@style/blackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_label"
        app:layout_constraintBottom_toBottomOf="parent"

        />

</android.support.constraint.ConstraintLayout>
